# hehe

./: .env.example  .firebaserc  .gitignore  .pyproject.toml  CLOUDFLARE_TUNNEL_SETUP.md  DEPLOYMENT_GUIDE.md  ENV_CONFIGURATION.md  FIREBASE_SETUP.md  Makefile  README.md  SECURITY_COMPLETE.md  TUNNEL_GUIDE.md  _mp_gen.py  error.html  firebase-database-rules.json  firebase-storage-rules.txt  firebase.json  index.html  index.html.backup  login.html  login_admin.html  login_public.html  music-player.js  music-player.min.js  package.json  pyproject.toml  styles.css  styles.min.css  sw.js  sw.min.js  test_server.py  todo.md  tunnel-restart.sh  upload.html  view.html
.github/: copilot-instructions.md
scripts/: generate_local_ssl.sh  push_firebase_rules.sh  share_quick_tunnel.sh
